# Cpp.Course.Lab2

./: CMakeLists.txt  README.md
src/series_cli/: CMakeLists.txt
src/series_cli/src/: main.cpp
src/series_core/: CMakeLists.txt
src/series_core/include/lab2/series/: series.hpp
src/series_core/src/: series.cpp
tests/: CMakeLists.txt
